[workspace]
members = ["rhea", "proxy", "cli", "hercules"]
resolver = "2"

[workspace.dependencies]
clap = "4.5.4"
dotenv = "0.15.0"
url = { version = "2.5.0", features = ["serde"] }

# codec
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9.33"
hex = "0.4.3"

# jsonrpc server
jsonrpsee = { version = "0.24.8", features = ["server", "macros"] }

# error
anyhow = "1.0.86"
thiserror = "2.0.11"

# log
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
console-subscriber = "0.4.0"

# async
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.10"
async-trait = "0.1.80"

# rome
rome-sdk = { path = "../rome-sdk/rome-sdk", default-features = false }
rome-da = { path = "../rome-sdk/rome-da" }
rome-obs = { path = "../rome-sdk/rome-obs" }

# evm
ethers = "2.0.14"

# solana
solana-sdk = "2.1.7"
solana-client = "2.1.7"

[patch.crates-io.curve25519-dalek]
git ="https://github.com/block-mesh/curve25519-dalek"
branch = "rustls-dep-hell-1-18"
