[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
ethers = { workspace = true }
rome-sdk = { workspace = true }
hex = { workspace = true }
async-trait = {workspace = true}
