[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[features]
single-state = ["rome-sdk/single-state"]
testnet = ["rome-sdk/testnet"]
mainnet = ["rome-sdk/mainnet"]
ci = ["rome-sdk/ci"]
default = []

[dependencies]
anyhow = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
ethers = { workspace = true }
rome-sdk = { workspace = true }
hex = { workspace = true }
async-trait = {workspace = true}
