[package]
name = "hercules"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
jsonrpsee = { workspace = true }
thiserror = { workspace = true }

# codec
serde = { workspace = true }

# log
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# async
async-trait = { workspace = true }
tokio = { workspace = true }

# solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# rome
rome-sdk = { workspace = true }
rome-obs = { workspace = true }

