[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
jsonrpsee = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rome-sdk = { workspace = true }
ethers = { workspace = true }
clap = { workspace = true } 
dotenv = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
tracing = { workspace = true }
