[package]
name = "rhea"
version = "0.1.0"
edition = "2021"

[features]
single-state = ["rome-sdk/single-state"]
testnet = ["rome-sdk/testnet"]
mainnet = ["rome-sdk/mainnet"]
ci = ["rome-sdk/ci"]
default = ["ci"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
url = {workspace = true}

# codec
serde = { workspace = true }

# log
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }

# async
tokio = { workspace = true }

# solana
solana-sdk = { workspace = true }

# rome
rome-sdk = { workspace = true, default-features = false }
rome-obs = { workspace = true }

# evm
ethers = { workspace = true }

